# xps-power-tool

./: .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
debian/: service
src/: main.rs
